# astrosmurf

./: requirements_setup_system_level.txt
backend/: .env.example  .gitignore  README.md  app.yaml  build.sh  main.py  pyproject.toml  requirements.txt  test.py
backend/ai/: nemotron_fal.py  nemotron_manim_generator.py  prompts.py  scrape.py
backend/db/: __init__.py  create_tables.sql  db.py
backend/utils/: s3_upload.py
backend/x/: post.py
frontend/: .example  API_INTEGRATION.md  IMPROVEMENTS_SUMMARY.md  README.md  package-lock.json  package.json
frontend/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/app/[category]/[...encodedUrl]/: page.tsx
frontend/app/api/webhooks/stripe/: route.ts
frontend/app/d/: layout.tsx  page.tsx
frontend/app/d/articles/[id]/: page.tsx
frontend/app/d/images/: page.tsx
frontend/app/subscription/: page.tsx
frontend/app/success/: page.tsx
frontend/components/: generation-form.tsx  persona-form.tsx  process-flow.tsx
frontend/components/articles/: article-card.tsx
frontend/components/auth/: SignInButtons.tsx
frontend/components/media/: media-card.tsx  media-grid.tsx
frontend/components/personas/: persona-form.tsx
frontend/components/stripe/: SubscribeButton.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  progress.tsx
frontend/lib/: ai.ts  mock-ai.ts  utils.ts
frontend/lib/aws/: s3.ts  ses.ts
frontend/lib/db/: actions.ts  db.ts  schema.ts
frontend/lib/stripe/: checkout.ts  customer_portal.ts  subscriptions.ts
