[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "openai>=1.13.3",
    "python-dotenv==1.0.0",
    "fal-client",
    "httpx>=0.24.0",
    "asyncpg==0.30.0",
    "tweepy[async]>=4.16.0",
    "async>=0.6.2",
    "markdownify>=1.2.2",
    "pytest>=9.0.1",
]
